// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmployeeSummary Renders with snapshot (summaryActionsDropdownOpen: false) 1`] = `
<div>
  <div
    className="row justify-content-center"
  >
    <div>
      <div>
        <h3>
          ID: undefined
        </h3>
      </div>
    </div>
  </div>
  <div
    className="row justify-content-center"
  />
  <div
    className="row justify-content-center"
  >
    <ButtonGroup>
      <ButtonDropdown
        isOpen={false}
        toggle={[MockFunction]}
      >
        <DropdownToggle
          caret={true}
          color="primary"
        >
          Actions
        </DropdownToggle>
        <DropdownMenu>
          <DropdownItem
            onClick={[MockFunction]}
          >
            Edit
          </DropdownItem>
        </DropdownMenu>
      </ButtonDropdown>
    </ButtonGroup>
  </div>
</div>
`;

exports[`EmployeeSummary Renders with snapshot (summaryActionsDropdownOpen: true) 1`] = `
<div>
  <div
    className="row justify-content-center"
  >
    <div>
      <div>
        <h3>
          ID: undefined
        </h3>
      </div>
    </div>
  </div>
  <div
    className="row justify-content-center"
  />
  <div
    className="row justify-content-center"
  >
    <ButtonGroup>
      <ButtonDropdown
        isOpen={true}
        toggle={[MockFunction]}
      >
        <DropdownToggle
          caret={true}
          color="primary"
        >
          Actions
        </DropdownToggle>
        <DropdownMenu>
          <DropdownItem
            onClick={[MockFunction]}
          >
            Edit
          </DropdownItem>
        </DropdownMenu>
      </ButtonDropdown>
    </ButtonGroup>
  </div>
</div>
`;
